--- a/Learning Basics/Django/myapp/blog/templates/index.html
+++ b/Learning Basics/Django/myapp/blog/templates/index.html
@@ -4,7 +4,7 @@
 <div class="container-fluid ">
     <div class="row my-2">
         <div class="col">
-            <h2 >{{ blog_title }}</h2>
+            <h2 >{{ blog_title | lower }}</h2>
         </div>
         <div class="col-3">
             <div class="input-group">
