--- a/Learning Basics/Django/myapp/blog/templates/index.html
+++ b/Learning Basics/Django/myapp/blog/templates/index.html
@@ -4,18 +4,21 @@
 <div class="container-fluid ">
     <div class="row my-2">
         <div class="col">
-            <h2 >{{ blog_title | lower }}</h2>
+            <h2 >{{ blog_title }}</h2>
         </div>
         <div class="col-3">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
                 <button class="btn btn-outline-light btn-primary " type="button" id="button-search">
-                  <i class="bi bi-search"></i> <!-- Bootstrap Icons -->
+                  <i class="bi bi-search"></i>
                 </button>
               </div>
         </div>
     </div>
     <div class="row m-3">
+
+        {% if posts %}
+        {% for post in posts %}
         <div class="col-4 mb-4">
             <div class="card">
                 <div class="card-body">
@@ -24,8 +27,8 @@
                             <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
                         </div>
                         <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
+                            <h5 class="card-title">{{ post.title }}</h5>
+                            <p class="card-text">{{ post.content }}</p>
                             <div class="d-flex justify-content-between">
                                  <a href="./detail.html">Read More</a>
                                 <a class="text-decoration-none text-dark fw-bold" href="#">Sports</a>
@@ -35,129 +38,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
-                            <div class="d-flex justify-content-between">
-                                 <a href="./detail.html">Read More</a>
-                                <a class="text-decoration-none text-dark fw-bold" href="#">Development</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
-                            <div class="d-flex justify-content-between">
-                                 <a href="./detail.html">Read More</a>
-                                <a class="text-decoration-none text-dark fw-bold" href="#">Engineering</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
-                            <div class="d-flex justify-content-between">
-                                 <a href="./detail.html">Read More</a>
-                                <a class="text-decoration-none text-dark fw-bold" href="#">Kids</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
-                            <div class="d-flex justify-content-between">
-                                 <a href="./detail.html">Read More</a>
-                                <a class="text-decoration-none text-dark fw-bold" href="#">Design</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img src="https://via.placeholder.com/300" class="img-fluid" alt="...">
-                        </div>
-                        <div class="col-md-8">
-                            <h5 class="card-title">Post title</h5>
-                            <p class="card-text">Some quick example text for the post's content.</p>
-                            <div class="d-flex justify-content-between">
-                                 <a href="./detail.html">Read More</a>
-                                <a class="text-decoration-none text-dark fw-bold" href="#">Movies</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 my-3">
-            <nav aria-label="Page navigation">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="?page=1" aria-label="First">
-                            <span aria-hidden="true">&laquo; first</span>
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page=1" aria-label="Previous">
-                            <span aria-hidden="true">previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><span class="page-link">Page 3 of 20.</span></li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page=4" aria-label="Next">
-                            <span aria-hidden="true">next</span>
-                        </a>
-                    </li>
-                    <li class="page-item">
-                        <a class="page-link" href="?page=20" aria-label="Last">
-                            <span aria-hidden="true">last &raquo;</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            
-        </div>
+        {% endfor %}
+        {% else %}
+        <p>No posts are available</p>
+        {% endif %}
+
     </div>
     <div class="row">
        
