--- a/Learning Basics/Django/myapp/blog/templates/detail.html
+++ b/Learning Basics/Django/myapp/blog/templates/detail.html
@@ -5,8 +5,8 @@
        
         <div class="row">
             <div class="col-lg-8">
-              <h1 class="mb-4">Post {{ post.id }}</h1>
-              <p class="text-muted">Posted on January {{ post.created_at | date:"F j,Y"}}</p>
+              <h1 class="mb-4">{{ post.title }}</h1>
+              <p class="text-muted">Posted on {{ post.created_at | date:"F j,Y"}}</p>
               <img src="{{ post.img_url }}" class="img-fluid mb-4" alt="Blog Image">
               <p>{{post.content}}</p>
             </div>
@@ -15,9 +15,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Related Posts</h5>
                   <ul class="list-unstyled">
-                    <li><a href="./detail.html">Post 1</a></li>
-                    <li><a href="./detail.html">Post 2</a></li>
-                    <li><a href="./detail.html">Post 3</a></li>
+                    {% for related_post in related_posts%}
+                    <li><a href="{% url 'blog:detail' slug=post.slug %}">{{related_post.title}}</a></li>
+                    {% endfor %}
+                    
                   </ul>
                 </div>
               </div>
