--- a/Learning Basics/Django/myapp/blog/templates/detail.html
+++ b/Learning Basics/Django/myapp/blog/templates/detail.html
@@ -5,7 +5,7 @@
        
         <div class="row">
             <div class="col-lg-8">
-              <h1 class="mb-4">{{ post.title }}</h1>
+              <h1 class="mb-4">{{ post.title }}<small style="font-size:18px">({{ post.category.name }})</small></h1>
               <p class="text-muted">Posted on {{ post.created_at | date:"F j,Y"}}</p>
               <img src="{{ post.img_url }}" class="img-fluid mb-4" alt="Blog Image">
               <p>{{post.content}}</p>
@@ -16,7 +16,7 @@
                   <h5 class="card-title">Related Posts</h5>
                   <ul class="list-unstyled">
                     {% for related_post in related_posts%}
-                    <li><a href="{% url 'blog:detail' slug=post.slug %}">{{related_post.title}}</a></li>
+                    <li><a href="{% url 'blog:detail' slug=related_post.slug %}">{{related_post.title}}</a></li>
                     {% endfor %}
                     
                   </ul>
