--- a/Learning Basics/Django/myapp/blog/templates/index.html
+++ b/Learning Basics/Django/myapp/blog/templates/index.html
@@ -17,8 +17,8 @@
     </div>
     <div class="row m-3">
 
-        {% if posts %}
-        {% for post in posts %}
+        {% if page_obj %}
+        {% for post in page_obj %}
         <div class="col-4 mb-4">
             <div class="card">
                 <div class="card-body">
