--- a/Learning Basics/Django/myapp/blog/templates/index.html
+++ b/Learning Basics/Django/myapp/blog/templates/index.html
@@ -15,6 +15,7 @@
               </div>
         </div>
     </div>
+
     <div class="row m-3">
 
         {% if page_obj %}
@@ -39,11 +40,46 @@
             </div>
         </div>
         {% endfor %}
+            <div class="col-12 my-3">
+                {% if page_obj.has_other_pages %}
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {% if page_obj.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page=1" aria-label="First">
+                                <span aria-hidden="true">&laquo; first</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ page_obj.previous_page_number}}" aria-label="Previous">
+                                <span aria-hidden="true">previous</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        <li class="page-item"><span class="page-link">Page {{page_obj.number}} of {{page_obj.paginator.num_pages}}.</span></li>
+                        {% if page_obj.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
+                                <span aria-hidden="true">next</span>
+                            </a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{page_obj.paginator.num_pages}}" aria-label="Last">
+                                <span aria-hidden="true">last &raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+                
+            </div>
+            {% endif %}
         {% else %}
         <p>No posts are available</p>
         {% endif %}
 
     </div>
+
     <div class="row">
        
     </div>
