--- a/Learning Basics/Django/myapp/blog/templates/contact.html
+++ b/Learning Basics/Django/myapp/blog/templates/contact.html
@@ -1,11 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+
     <div class="container-fluid ">
         <div class="d-flex justify-content-center mt-5">
             <div class="d-flex gap-3 flex-column">
                 <h3>Contact Form</h3>
                 <form method="post" class="row g-3">
+                    {% csrf_token %}
                     <div class="col-md-6">
                         <label for="name" class="form-label">Name</label>
                         <input type="text" class="form-control" id="name" name="name" required>
